--- a/galeria.html
+++ b/galeria.html
@@ -27,31 +27,31 @@
         <table>
             <tr>
                 <th>
-                    <img src="/assests/img1.jpeg" alt="consultorio_1" height="200" width="200">
+                    <img src="assests/img1.jpeg" alt="consultorio_1" height="200" width="200">
                 </th>
                 <th>
-                    <img src="/assests/img2.jpeg" alt="sala_de_espera" height="200" width="200">
+                    <img src="assests/img2.jpeg" alt="sala_de_espera" height="200" width="200">
                 </th>
                 <th>
-                    <img src="/assests/img3.jpeg" alt="sala_de_medicamento" height="200" width="200">
+                    <img src="assests/img3.jpeg" alt="sala_de_medicamento" height="200" width="200">
                 </th>
                 <th>
-                    <img src="/assests/img4.jpeg" alt="sala_de_espera_2" height="200" width="200">
+                    <img src="assests/img4.jpeg" alt="sala_de_espera_2" height="200" width="200">
                 </th>
             </tr>
 
             <tr>
                 <th>
-                    <img src="/assests/img5.jpeg" alt="medico" height="200" width="200">
+                    <img src="assests/img5.jpeg" alt="medico" height="200" width="200">
                 </th>
                 <th>
-                    <img src="/assests/img6.jpeg" alt="consultorio_2" height="200" width="200">
+                    <img src="assests/img6.jpeg" alt="consultorio_2" height="200" width="200">
                 </th>
                 <th>
-                    <img src="/assests/img7.jpeg" alt="equipe" height="200" width="200">
+                    <img src="assests/img7.jpeg" alt="equipe" height="200" width="200">
                 </th>
                 <th>
-                    <img src="/assests/img8.jpeg" alt="corredor_de_salas" height="200" width="200">
+                    <img src="assests/img8.jpeg" alt="corredor_de_salas" height="200" width="200">
                 </th>
             </tr>
         </table>
